[package]
name = "abl-newlang-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.167", features = ["derive"] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
